[package]
name = "tokio-console-mocks"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.2"
chrono = "0.4"
crossterm = "0.19"
derive_more = "0.99"
tui = { version = "0.14.0", features = ["crossterm"] }
stretch = "0.3"